<resources>
    <string name="app_name">Finnish Parliament App</string>
    <string name="party_list_fragment_label">View Parliament parties</string>
    <string name="member_list_fragment_label">Member in {party}</string>
    <string name="member_info_fragment_label">View member</string>
    <string name="add_review_fragment_label">Add review</string>
    <string name="update_review_fragment_label">Update review</string>
    <string name="favorite_list_fragment_label">View favorite members</string>
    <string name="statistic_fragment_label">View statistic</string>

    <!--MemberInfoFragment-->
    <string name="party_name_text">%s</string>
    <string name="member_name_text">%1s %2s</string>
    <string name="user_review_text_label"><u>Your Reviews</u></string>
    <string name="review_add_button">Add</string>
    <string name="review_text">%s</string>
    <string name="review_timestamp">Created at: %s</string>
    <string name="mark_favorite">Mark as favorite</string>
    <string name="unMark_favorite">Un-mark your favorite</string>
    <string name="mark_favorite_member_name">Mark \'%s\' as favorite</string>
    <string name="unMark_favorite_member_name">Un-mark \'%s\' from favorite list</string>
    <string name="view_favorite_list">View favorites</string>
    <string name="back_to_home">Back to home</string>

    <!-- AddReviewFragment   -->
    <string name="rating_label">Your Rating</string>
    <string name="comment_label">Your Comment</string>
    <string name="comment_edt">Write your comments</string>
    <string name="add_button">Add Review</string>

    <!-- UpdateReviewFragment-->
    <string name="update_button">Update Review</string>
    <string name="delete_review">Delete this review</string>

    <!--IntroAppFragment-->
    <string name="favorite_bottom_menu">View Favorite</string>
    <string name="parties_bottom_menu">View Parties</string>
    <string name="statistic_bottom_menu">View Statistic</string>

    <!--FavoriteListFragment-->
    <string name="favorite_name_text">%1s %s</string>
    <string name="favorite_party_text">%s</string>
    <string name="view_more_favorite">View more</string>
    <string name="un_mark_favorite">Unmark</string>

    <!--StatisticFragment-->
    <string name="statistic_heading">Data Statistic</string>
    <string name="statistic_party_item">Party %1s : %2s %%</string>
    <string name="pie_chart_heading">Party Pie Chart</string>
    <string name="sd_label">sd</string>
    <string name="vihr_label">vihr</string>
    <string name="ps_label">ps</string>
    <string name="kok_label">kok</string>
    <string name="r_label">r</string>
    <string name="kesk_label">kesk</string>
    <string name="kd_label">kd</string>
    <string name="vas_label">vas</string>
    <string name="wr_label">wr</string>
    <string name="liik_label">liik</string>
    <string name="vkk_label">vkk</string>



</resources>