<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mark_favorite"
        android:title="@string/mark_favorite"
        app:iconTint="@color/white"
        app:showAsAction= "never" />

    <item android:id="@+id/unMark_favorite"
        android:title="@string/unMark_favorite"
        app:iconTint="@color/white"
        app:showAsAction= "never" />

    <item android:id="@+id/view_favorites_from_info_fragment"
        android:title="@string/view_favorite_list"
        app:iconTint="@color/white"
        app:showAsAction= "never"
        />
    <item android:id="@+id/back_to_home"
        android:icon="@drawable/home_icon"
        android:title="@string/back_to_home"
        app:iconTint="@color/white"
        app:showAsAction="always"
        />
</menu>