<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/introAppFragment">

    <fragment
        android:id="@+id/introAppFragment"
        android:name="fi.giao.finnishparliamentapp.ui.fragments.IntroAppFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_intro_app" >
        <action
            android:id="@+id/action_introAppFragment_to_partyListFragment"
            app:destination="@id/partyListFragment" />
        <action
            android:id="@+id/action_introAppFragment_to_favoriteListFragment"
            app:destination="@id/favoriteListFragment" />
    </fragment>
    <fragment
        android:id="@+id/partyListFragment"
        android:name="fi.giao.finnishparliamentapp.ui.fragments.PartyListFragment"
        android:label="@string/party_list_fragment_label"
        tools:layout="@layout/fragment_party_list" >
        <action
            android:id="@+id/action_partyListFragment_to_memberListFragment"
            app:destination="@id/memberListFragment" />
    </fragment>
    <fragment
        android:id="@+id/memberListFragment"
        android:name="fi.giao.finnishparliamentapp.ui.fragments.MemberListFragment"
        android:label="@string/member_list_fragment_label"
        tools:layout="@layout/fragment_member_list" >
        <argument
            android:name="party"
            app:argType="string" />
        <action
            android:id="@+id/action_memberListFragment_to_memberInfoFragment"
            app:destination="@id/memberInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/memberInfoFragment"
        android:name="fi.giao.finnishparliamentapp.ui.fragments.MemberInfoFragment"
        android:label="@string/member_info_fragment_label"
        tools:layout="@layout/fragment_member_info" >
        <argument
            android:name="requestedMember"
            app:argType="fi.giao.finnishparliamentapp.database.ParliamentMember" />
        <action
            android:id="@+id/action_memberInfoFragment_to_addReviewFragment"
            app:destination="@id/addReviewFragment" />
        <action
            android:id="@+id/action_memberInfoFragment_to_updateReviewFragment2"
            app:destination="@id/updateReviewFragment" />
        <action
            android:id="@+id/action_memberInfoFragment_to_favoriteListFragment"
            app:destination="@id/favoriteListFragment" />
    </fragment>
    <fragment
        android:id="@+id/addReviewFragment"
        android:name="fi.giao.finnishparliamentapp.ui.fragments.AddReviewFragment"
        android:label="@string/add_review_fragment_label"
        tools:layout="@layout/fragment_add_review" >
        <argument
            android:name="hetekaId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/updateReviewFragment"
        android:name="fi.giao.finnishparliamentapp.ui.fragments.UpdateReviewFragment"
        android:label="@string/update_review_fragment_label"
        tools:layout="@layout/fragment_update_review" >
        <argument
            android:name="requestedReview"
            app:argType="fi.giao.finnishparliamentapp.database.MemberReview" />
    </fragment>
    <fragment
        android:id="@+id/favoriteListFragment"
        android:name="fi.giao.finnishparliamentapp.ui.fragments.FavoriteListFragment"
        android:label="fragment_favorite_list"
        tools:layout="@layout/fragment_favorite_list" >
        <action
            android:id="@+id/action_favoriteListFragment_to_memberInfoFragment"
            app:destination="@id/memberInfoFragment" />
    </fragment>
</navigation>